# uifw

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
res/fonts/: generate_msdf_font_atlases.sh
res/fonts/_generated/: JetBrainsMono.json  Roboto.json
res/shaders/: .gitignore  batch_render.frag.hlsl  batch_render.slang  batch_render.vert.hlsl  batch_render_font.frag.hlsl  batch_render_font.vert.hlsl  compile_shaders.sh
res/shaders/_compiled/SPIRV/: batch_render.vert.spv
sample/: CMakeLists.txt
sample/01-demo/: CMakeLists.txt  main.c
src/: CMakeLists.txt  Utils.hpp
src/UI/Canvas/: Canvas.cpp  Canvas.hpp
src/UI/ECS/Components/: BaseComponent.hpp  BaseComponents.hpp  FontComponents.hpp  InputComponents.hpp  RenderingComponents.hpp  StyleComponents.hpp
src/UI/ECS/ECSRoot/: ECSRoot.cpp  ECSRoot.hpp
src/UI/ECS/Entity/: Entity.cpp  Entity.hpp
src/UI/GFX/: Shader.cpp  Shader.hpp
src/UI/GFX/Renderer/: Renderer.cpp  Renderer.hpp  RendererTypes.hpp
src/UI/GFX/Renderer/Text/: TextHelpers.cpp  TextHelpers.hpp  TextRendererHelpers.cpp  TextRendererHelpers.hpp  TextTypes.hpp
src/UI/IO/Image/: Image.cpp  Image.hpp
src/UI/IO/Input/: Input.hpp  InputHelpers.cpp  InputHelpers.hpp
src/UI/IO/Text/: FontLoader.cpp  FontLoader.hpp
src/UI/Layout/: LayoutHelpers.cpp  LayoutHelpers.hpp  LayoutTypes.hpp
src/UI/Window/: Window.cpp  Window.hpp
src/uifw/Core/: Application.c  Application.cpp  Application.hpp  Coordinates.h  Types.h
src/uifw/Core/Utils/: Log.h  Memory.h
src/uifw/ECS/: Components.h  Entity.c
src/uifw/GFX/: Shader.c  Shader.h
src/uifw/GFX/Renderer/: Renderer.c  Renderer.h  RendererHelpers.c  RendererHelpers.h  RendererTypes.h
src/uifw/Platform/: Input.c  Input.h  Window.c
src/uifw/Platform/IO/: FileUtils.c  FileUtils.h
src/uifw/UI/Canvas/: Canvas.c  Canvas.h
src/uifw/UI/Layout/: Layout.c
tests/: CMakeLists.txt  main.c  test_main.cpp
tests/Core/: ContainersTest.h
tests/ECS/: CanvasTest.hpp  ECSTest.cpp  ECSTest.hpp
